udl/test/corpus/class-keywords.txt
====
DependsOn
====
Class MyApp.MyClass [ DependsOn = MyApp.Class1 ] {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (class_name
        (identifier)))
    (class_body
      (line_comment_1))))

====
DependsOn List Version
====
Class MyApp.MyClass [ DependsOn = (MyApp.Class1,MyApp.Class2) ] {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (class_name
        (identifier))
      (class_name
        (identifier)))
    (class_body
      (line_comment_1))))

====
Compile after
====
Class MyApp.MyClass [ CompileAfter = MyApp.Class1 ] {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (class_name
        (identifier)))
    (class_body
      (line_comment_1))))

====
Compile after List of Classes
====
Class MyApp.MyClass [ CompileAfter = (MyApp.Class1,MyApp.Class2,MyApp.Class3) ] {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (class_name
        (identifier))
      (class_name
        (identifier))
      (class_name
        (identifier)))
    (class_body
      (line_comment_1))))

====
ClientName
====
Class MyApp.MyClass [ ClientName = clientclassname ]  {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (property_name))
    (class_body
      (line_comment_1))))

===
class keyword - ClientDataType = bigint
===
Class Test.ClientDataTypeBigInt [ ClientDataType = bigint ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = binary
===
Class Test.ClientDataTypeBinary [ ClientDataType = binary ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = binarystream
===
Class Test.ClientDataTypeBinaryStream [ ClientDataType = binarystream ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = boolean
===
Class Test.ClientDataTypeBoolean [ ClientDataType = boolean ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = characterstream
===
Class Test.ClientDataTypeCharacterStream [ ClientDataType = characterstream ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = currency
===
Class Test.ClientDataTypeCurrency [ ClientDataType = currency ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = date
===
Class Test.ClientDataTypeDate [ ClientDataType = date ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = decimal
===
Class Test.ClientDataTypeDecimal [ ClientDataType = decimal ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = double
===
Class Test.ClientDataTypeDouble [ ClientDataType = double ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = fdate
===
Class Test.ClientDataTypeFDate [ ClientDataType = fdate ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = ftimestamp
===
Class Test.ClientDataTypeFTimestamp [ ClientDataType = ftimestamp ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = handle
===
Class Test.ClientDataTypeHandle [ ClientDataType = handle ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = integer
===
Class Test.ClientDataTypeInteger [ ClientDataType = integer ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = list
===
Class Test.ClientDataTypeList [ ClientDataType = list ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = longvarchar
===
Class Test.ClientDataTypeLongVarchar [ ClientDataType = longvarchar ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = numeric
===
Class Test.ClientDataTypeNumeric [ ClientDataType = numeric ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = status
===
Class Test.ClientDataTypeStatus [ ClientDataType = status ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = time
===
Class Test.ClientDataTypeTime [ ClientDataType = time ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = timestamp
===
Class Test.ClientDataTypeTimestamp [ ClientDataType = timestamp ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientDataType = varchar
===
Class Test.ClientDataTypeVarchar [ ClientDataType = varchar ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
invalid - ClientDataType unknown rhs
:error
===
Class Test.ClientDataTypeInvalid1 [ ClientDataType = float128 ]
{
}
---



===
invalid - ClientDataType missing equals
:error
===
Class Test.ClientDataTypeInvalid2 [ ClientDataType varchar ]
{
}
---



===
invalid - ClientDataType missing rhs
:error
===
Class Test.ClientDataTypeInvalid3 [ ClientDataType = ]
{
}
---



===
invalid - ClientDataType rhs is a quoted string
:error
===
Class Test.ClientDataTypeInvalid4 [ ClientDataType = "varchar" ]
{
}
---



===
class keyword - ClassType = datatype
===
Class Test.ClassTypeDatatype [ ClassType = datatype ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = dynamic
===
Class Test.ClassTypeDynamic [ ClassType = dynamic ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = index
===
Class Test.ClassTypeIndex [ ClassType = index ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = persistent
===
Class Test.ClassTypePersistent [ ClassType = persistent ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = serial
===
Class Test.ClassTypeSerial [ ClassType = serial ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = stream
===
Class Test.ClassTypeStream [ ClassType = stream ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = view
===
Class Test.ClassTypeView [ ClassType = view ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType = empty string
===
Class Test.ClassTypeEmpty [ ClassType = "" ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClassType case-insensitive
===
Class Test.ClassTypeCaseInsensitive [ ClassType = PeRsIsTeNt ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
invalid - ClassType unknown rhs
:error
===
Class Test.ClassTypeInvalid1 [ ClassType = foo ]
{
}
---



===
invalid - ClassType missing equals
:error
===
Class Test.ClassTypeInvalid2 [ ClassType persistent ]
{
}
---



===
invalid - ClassType missing rhs
:error
===
Class Test.ClassTypeInvalid3 [ ClassType = ]
{
}
---



===
invalid - ClassType empty (not quoted)
:error
===
Class Test.ClassTypeInvalid4 [ ClassType =  ]
{
}
---



===
invalid - ClassType rhs is quoted non-empty
:error
===
Class Test.ClassTypeInvalid5 [ ClassType = "persistent" ]
{
}
---



===
invalid - ClassType multiple values
:error
===
Class Test.ClassTypeInvalid6 [ ClassType = persistent, serial ]
{
}
---



===
invalid - DdlAllowed =
:error
===
Class Test.ClassTypeInvalid6 [ DdlAllowed = 0]
{
}
---



===
invalid - Deprecated =
:error
===
Class Test.ClassTypeInvalid6 [ Deprecated = 0]
{
}
---



===
invalid - Final =
:error
===
Class Test.ClassTypeInvalid6 [ Final = 0]
{
}
---



===
DdlAllowed
===
Class Test.ClassTypeInvalid6 [ DdlAllowed ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body)))

===
Not DdlAllowed
===
Class Test.ClassTypeInvalid6 [ Not DdlAllowed ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body)))

===
Not Deprecated
===
Class Test.ClassTypeInvalid6 [ Not Deprecated ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body)))

===
Deprecated
===
Class Test.ClassTypeInvalid6 [ Deprecated ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body)))

===
Final
===
Class Test.ClassTypeInvalid6 [ Final ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body)))

===
Not NoExtent
===
Class Test.ClassTypeInvalid6 [ Not NoExtent ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body)))

===
NoExtent
===
Class Test.ClassTypeInvalid6 [ NoExtent ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body)))

===
Not ProcedureBlock
===
Class Test.ClassTypeInvalid6 [ Not ProcedureBlock ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body)))

===
ProcedureBlock
===
Class Test.ClassTypeInvalid6 [ ProcedureBlock ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body)))

===
Not Final
===
Class Test.ClassTypeInvalid6 [ Not Final ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body)))

===
Not Hidden
===
Class Test.ClassTypeInvalid6 [ Not Hidden ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body)))

===
Hidden
===
Class Test.ClassTypeInvalid6 [ Hidden ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body)))

===
Inheritance right
===
Class X Extends (A, B, C) [ Inheritance = right ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier))
      (class_name
        (identifier))
      (class_name
        (identifier)))
    (class_keyword
      (typename))
    (class_body)))

===
Inheritance right
===
Class X Extends (A, B, C) [ Inheritance = left ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier))
      (class_name
        (identifier))
      (class_name
        (identifier)))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - ClientName simple
===
Class Test.ClientNameSimple [ ClientName = MyClientClass ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (property_name))
    (class_body)))

===
class keyword - ClientName lowercase
===
Class Test.ClientNameLower [ ClientName = myclientclass ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (property_name))
    (class_body)))

===
class keyword - ClientName with underscores and digits
===
Class Test.ClientNameUnderscoreDigits [ ClientName = My_Client_2 ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (property_name))
    (class_body)))

===
class keyword - ClientName starts with %
===
Class Test.ClientNamePercent [ ClientName = %ClientClass ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (property_name))
    (class_body)))

===
class keyword - ClientName case-insensitive keyword
===
Class Test.ClientNameKeywordCase [ cLiEnTnAmE = ClientAlias ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (property_name))
    (class_body)))

===
invalid - ClientName missing equals
:error
===
Class Test.ClientNameInvalidNoEquals [ ClientName ClientAlias ]
{
}
---



===
invalid - ClientName missing rhs
:error
===
Class Test.ClientNameInvalidMissingRhs [ ClientName = ]
{
}
---



===
invalid - ClientName rhs has whitespace
:error
===
Class Test.ClientNameInvalidWhitespace [ ClientName = Client Alias ]
{
}
---



===
class keyword - Language = objectscript (default language)
===
Class Test.LanguageObjectScript [ Language = objectscript ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
Sharded
===
Class MyApp.MyClass Extends %Persistent [ Sharded = 1 ]  {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier)))
    (class_keyword
      (numeric_literal))
    (class_body
      (line_comment_1))))

===
Sharded Invalid
:error
===
Class MyApp.MyClass Extends %Persistent [ Sharded ]  {
 //class members
}
---



===
Sharded Invalid =
:error
===
Class MyApp.MyClass Extends %Persistent [ Sharded = 0 ]  {
 //class members
}
---



===
Sharded Invalid Not
:error
===
Class MyApp.MyClass Extends %Persistent [ Not Sharded ]  {
 //class members
}
---



===
class keyword - Language = tsql
===
Class Test.LanguageTSQL [ Language = tsql ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - Language keyword case-insensitive + value case-insensitive
===
Class Test.LanguageCaseInsensitive [ lAnGuAgE = ObJeCtScRiPt ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_body)))

===
invalid - Language = python (not allowed at class level)
:error
===
Class Test.LanguageInvalidPython [ Language = python ]
{
}
---



===
invalid - Language = ispl (not allowed at class level)
:error
===
Class Test.LanguageInvalidISPL [ Language = ispl ]
{
}
---



===
invalid - Language unknown rhs
:error
===
Class Test.LanguageInvalidUnknown [ Language = foobar ]
{
}
---



===
invalid - Language missing equals
:error
===
Class Test.LanguageInvalidNoEquals [ Language objectscript ]
{
}
---



===
invalid - Language missing rhs
:error
===
Class Test.LanguageInvalidMissingRhs [ Language = ]
{
}
---



===
invalid - Language rhs is quoted
:error
===
Class Test.LanguageInvalidQuoted [ Language = "objectscript" ]
{
}
---



===
invalid - LegacyInstanceContext =
:error
===
Class MyApp.MyClass [ LegacyInstanceContext = 0]  {
 //class members
}
---



===
LegacyInstanceContext
===
Class MyApp.MyClass [ LegacyInstanceContext ]  {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword)
    (class_body
      (line_comment_1))))

===
Not LegacyInstanceContext
===
Class MyApp.MyClass [ Not LegacyInstanceContext ]  {
 //class members
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (keyword_not))
    (class_body
      (line_comment_1))))

===
class keyword - OdbcType = BIGINT
===
Class Test.OdbcTypeBigInt [ ClassType = DataType, OdbcType = BIGINT ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = BIT
===
Class Test.OdbcTypeBit [ ClassType = DataType, OdbcType = BIT ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = DATE
===
Class Test.OdbcTypeDate [ ClassType = DataType, OdbcType = DATE ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = DOUBLE
===
Class Test.OdbcTypeDouble [ ClassType = DataType, OdbcType = DOUBLE ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = INTEGER
===
Class Test.OdbcTypeInteger [ ClassType = DataType, OdbcType = INTEGER ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = LONGVARBINARY
===
Class Test.OdbcTypeLongVarBinary [ ClassType = DataType, OdbcType = LONGVARBINARY ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = LONGVARCHAR
===
Class Test.OdbcTypeLongVarchar [ ClassType = DataType, OdbcType = LONGVARCHAR ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = NUMERIC
===
Class Test.OdbcTypeNumeric [ ClassType = DataType, OdbcType = NUMERIC ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = RESULTSET
===
Class Test.OdbcTypeResultSet [ ClassType = DataType, OdbcType = RESULTSET ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = SMALLINT
===
Class Test.OdbcTypeSmallInt [ ClassType = DataType, OdbcType = SMALLINT ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = STRUCT
===
Class Test.OdbcTypeStruct [ ClassType = DataType, OdbcType = STRUCT ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = TIME
===
Class Test.OdbcTypeTime [ ClassType = DataType, OdbcType = TIME ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = TIMESTAMP
===
Class Test.OdbcTypeTimestamp [ ClassType = DataType, OdbcType = TIMESTAMP ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = TINYINT
===
Class Test.OdbcTypeTinyInt [ ClassType = DataType, OdbcType = TINYINT ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = VARBINARY
===
Class Test.OdbcTypeVarBinary [ ClassType = DataType, OdbcType = VARBINARY ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType = VARCHAR
===
Class Test.OdbcTypeVarchar [ ClassType = DataType, OdbcType = VARCHAR ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType value case-insensitive
===
Class Test.OdbcTypeCaseInsensitive [ ClassType = DataType, OdbcType = vArChAr ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
class keyword - OdbcType keyword case-insensitive
===
Class Test.OdbcTypeKeywordCase [ ClassType = DataType, oDbCtYpE = VARCHAR ]
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_keyword
      (typename))
    (class_keyword
      (typename))
    (class_body)))

===
invalid - OdbcType unknown rhs
:error
===
Class Test.OdbcTypeInvalid1 [ ClassType = DataType, OdbcType = MONEY ]
{
}
---



===
invalid - OdbcType missing equals
:error
===
Class Test.OdbcTypeInvalid2 [ ClassType = DataType, OdbcType VARCHAR ]
{
}
---



===
invalid - OdbcType missing rhs
:error
===
Class Test.OdbcTypeInvalid3 [ ClassType = DataType, OdbcType = ]
{
}
---



===
invalid - OdbcType rhs is quoted
:error
===
Class Test.OdbcTypeInvalid4 [ ClassType = DataType, OdbcType = "VARCHAR" ]
{
}
---



===
invalid - OdbcType multiple values
:error
===
Class Test.OdbcTypeInvalid5 [ ClassType = DataType, OdbcType = VARCHAR, INTEGER ]
{
}
---



===
class keyword - Owner simple
===
Class Test.OwnerSimple [ Owner = {_SYSTEM} ]
{
}
---
